--- a/AoC 2022/AoC 2022.xcodeproj/xcshareddata/xcschemes/AoC 2022.xcscheme
+++ b/AoC 2022/AoC 2022.xcodeproj/xcshareddata/xcschemes/AoC 2022.xcscheme
@@ -53,7 +53,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "&quot;/Users/endavid/dev/algoDeSwift/AoC 2022/Resources/day7_input.txt&quot;"
+            argument = "&quot;/Users/endavid/dev/algoDeSwift/AoC 2022/Resources/day8_input.txt&quot; /Users/endavid/dev/algoDeSwift/output/day9"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
