--- a/AoC 2022/AoC 2022.xcodeproj/xcshareddata/xcschemes/AoC 2022.xcscheme
+++ b/AoC 2022/AoC 2022.xcodeproj/xcshareddata/xcschemes/AoC 2022.xcscheme
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -53,7 +53,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "&quot;/Users/endavid/dev/algoDeSwift/AoC 2022/Resources/day9_input.txt&quot; /Users/endavid/dev/algoDeSwift/output/day9-"
+            argument = "&quot;/Users/endavid/dev/algoDeSwift/AoC 2022/Resources/day10_input.txt&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
