AoC 2022 Day 12 Hill climbing

--- a/AoC 2022/AoC 2022.xcodeproj/xcshareddata/xcschemes/AoC 2022.xcscheme
+++ b/AoC 2022/AoC 2022.xcodeproj/xcshareddata/xcschemes/AoC 2022.xcscheme
@@ -53,7 +53,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "&quot;/Users/endavid/dev/algoDeSwift/AoC 2022/Resources/day11_input.txt&quot;"
+            argument = "&quot;/Users/endavid/dev/algoDeSwift/AoC 2022/Resources/day12_input.txt&quot; &quot;/Users/endavid/dev/advent/2022-12/output/day12_&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
